frontend/test/should_fail/inh_attrib_model_014.gm
// A redeclaration of a directly inherited edge attribute should be rejected

model inh_attrib_model_014.gm;

edge class Type1 {
}

edge class Type2 extends Type1 {
	a : float;
}

edge class Type3 extends Type2 {
	a: float;
}


